#618 fix bug double scrollbar

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -67,8 +67,7 @@
     margin-left: -10px;
 }
 
-.ant-layout-sider-children>ul,
-.ant-layout-sider-children>ul>li>ul {
+.ant-layout-sider-children>ul {
     max-height: 75vh;
     overflow-y: auto;
 }
